# qeriplayer

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  README.md  justfile
.agents/skills/feature-workflow/: SKILL.md
.agents/skills/review-fix/: SKILL.md
.githooks/: commit-msg
.github/workflows/: ci.yml
docs/: README.md  TODO.md
docs/architecture/: coroutines.md  index.md  layers.md  porting-from-android.md
docs/modules/: app.md  domain.md  index.md
docs/modules/api/: bilibili.md  common.md  index.md  netease.md  qqmusic.md  youtube.md
docs/modules/core/: crypto.md  database.md  filesystem.md  index.md  logger.md  network.md
docs/modules/repo/: index.md
openspec/: config.yaml
openspec/changes/add-repository-layer/: tasks.md
openspec/changes/api-common-netease/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-14-phase1-foundation/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-17-add-repository-layer/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-17-api-common-netease/: tasks.md  (+2 more)
openspec/changes/netease-endpoint-cleanup/: design.md  proposal.md  tasks.md
openspec/changes/phase1-foundation/: design.md  proposal.md  tasks.md
openspec/changes/phase3-playback-engine/: design.md  proposal.md  tasks.md
openspec/changes/phase4-viewmodel-layer/: design.md  proposal.md  tasks.md
openspec/changes/qcoro-qml-integration/: design.md  proposal.md  tasks.md
openspec/changes/qml-infrastructure-main-shell/: design.md  proposal.md  tasks.md
openspec/changes/qml-library-view/: design.md  proposal.md  tasks.md
openspec/changes/qml-search-view/: tasks.md
openspec/changes/settings-qmltask-and-sidebar-fix/: design.md  proposal.md  tasks.md
openspec/specs/api-common/: spec.md
openspec/specs/crypto/: spec.md
openspec/specs/database/: spec.md
openspec/specs/domain-models/: spec.md
openspec/specs/filesystem/: spec.md
openspec/specs/logger/: spec.md
openspec/specs/netease-client/: spec.md
openspec/specs/play-history-repository/: spec.md
openspec/specs/player-state-repository/: spec.md
openspec/specs/playlist-repository/: spec.md
openspec/specs/settings-repository/: spec.md
openspec/specs/song-repository/: spec.md
scripts/: check-format.sh  install-deps.sh  install-qcoro.sh
src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/api/bilibili/: BilibiliClient.cpp  BilibiliClient.h  BilibiliParser.cpp
src/api/common/: ApiError.cpp  ApiError.h  ApiResult.h  IMusicPlatformPlugin.h  LoginResult.h  PlayHistory.h  QrCodeData.h  VoidResult.h
src/api/netease/: NeteaseClient.cpp  NeteaseClient.h  NeteaseClientAuth.cpp  NeteaseClientContent.cpp  NeteaseClientCore.cpp  NeteaseClientUser.cpp  NeteaseCrypto.cpp  NeteaseCrypto.h  NeteaseParser.cpp  NeteaseParser.h
src/app/: NeriPlayerApplication.cpp  NeriPlayerApplication.h  QeriPlayerApplication.cpp  QeriPlayerApplication.h  ServiceLocator.h
src/core/crypto/: CryptoUtils.cpp  CryptoUtils.h  Decryptor.cpp  Decryptor.h  Encryptor.cpp  Encryptor.h  SecureStorage.cpp  SecureStorage.h
src/core/database/: DatabaseManager.cpp  DatabaseManager.h
src/core/filesystem/: AppPaths.cpp  AppPaths.h  FileUtils.cpp  FileUtils.h  FileWatcher.cpp  FileWatcher.h
src/core/logger/: Logger.cpp  Logger.h
src/core/network/: HttpClient.cpp  HttpClient.h  NetworkManager.cpp  NetworkManager.h  NetworkMonitor.cpp  NetworkMonitor.h  WebSocketClient.cpp  WebSocketClient.h
src/domain/: Album.h  Artist.h  Domain.h  Enums.h  ListenTogether.h  Lyrics.h  PersistedPlayerState.h  Playlist.h  PlaylistSummary.cpp  PlaylistSummary.h  SearchResult.h  Song.h  SongIdentity.h  SongUrlResult.h
src/player/: BackendFactory.cpp  BackendFactory.h  IPlayerBackend.h  PlayQueue.cpp  PlayQueue.h  PlaybackController.cpp  PlaybackController.h
src/player/backends/: QtMultimediaBackend.cpp  QtMultimediaBackend.h
src/qml/: LibraryView.qml  LocalPlaylistDetailView.qml  NeteasePlaylistDetailView.qml  PlayerBar.qml  PlaylistCard.qml  Sidebar.qml  SongDelegate.qml  TransportControls.qml  VolumeControl.qml  main.qml  qml.qrc
src/repo/: IPlayHistoryRepository.h  IPlayerStateRepository.h  IPlaylistRepository.h  ISettingsRepository.h  ISongRepository.h  PlayHistoryRepository.cpp  PlayHistoryRepository.h  PlayerStateRepository.cpp  PlayerStateRepository.h  PlaylistRepository.cpp  PlaylistRepository.h  SettingsRepository.cpp  SettingsRepository.h  SongRepository.cpp  SongRepository.h  SqlRowMapper.cpp  SqlRowMapper.h
src/viewmodel/: IPlaylistLibraryClient.h  LocalPlaylistDetailViewModel.cpp  LocalPlaylistDetailViewModel.h  MainViewModel.cpp  MainViewModel.h  NeteasePlaylistDetailViewModel.cpp  NeteasePlaylistDetailViewModel.h  NeteasePlaylistLibraryClient.h  PlayerViewModel.cpp  PlayerViewModel.h  PlaylistViewModel.cpp  PlaylistViewModel.h  SearchViewModel.cpp  SearchViewModel.h  SettingsViewModel.cpp  SettingsViewModel.h  SongListModel.cpp  SongListModel.h  ViewModelError.cpp  ViewModelError.h
tests/: CMakeLists.txt
tests/api/: CMakeLists.txt  NeteaseCaptchaLogin.cpp  TestNeteaseCrypto.cpp  TestNeteaseE2E.cpp  TestNeteaseParser.cpp
tests/core/: CMakeLists.txt  TestCrypto.cpp  TestDatabase.cpp  TestFileSystem.cpp  TestLogger.cpp
tests/domain/: CMakeLists.txt  TestDomainModels.cpp
tests/player/: CMakeLists.txt  TestPlayQueue.cpp  TestPlaybackController.cpp  TestQtMultimediaBackend.cpp
tests/qml/: CMakeLists.txt  test_main.cpp
tests/qml/data/: tst_LibraryView.qml  tst_NowPlayingInfo.qml  tst_Toast.qml  tst_TransportControls.qml
tests/repo/: CMakeLists.txt  TestPlayHistoryRepository.cpp  TestPlayerStateRepository.cpp  TestPlaylistRepository.cpp  TestSchemaMigration.cpp  TestSchemaV2.cpp  TestSettingsRepository.cpp  TestSongRepository.cpp  TestSqlRowMapper.cpp
tests/viewmodel/: CMakeLists.txt  TestLocalPlaylistDetailViewModel.cpp  TestMainViewModel.cpp  TestNeteasePlaylistDetailViewModel.cpp  TestPlayerViewModel.cpp  TestPlaylistViewModel.cpp  TestSearchViewModel.cpp  TestSettingsViewModel.cpp  TestSongListModel.cpp  TestViewModelError.cpp
(+45 files in other folders)
